--- a/hw2_anna_hyunjung_kim.qmd
+++ b/hw2_anna_hyunjung_kim.qmd
@@ -28,6 +28,11 @@ Use your function to find the answer if the number to be used for both log expre
 Also use R code to round your answer to the nearest tenth
 
 ```{r}
+Q2_log <- function(x, p) {
+  (log(x) * log10(x)) / (p^(1/3))
+}
+
+Q2_log(32, 11)
 
 ```
 
@@ -42,6 +47,7 @@ Use and show R coding to calculate the standard deviation for each variable of t
 -   Body – the operations performed in each iteration
 
 ```{r}
+
 
 ```
 
