--- a/hw2_anna_hyunjung_kim.qmd
+++ b/hw2_anna_hyunjung_kim.qmd
@@ -47,6 +47,15 @@ Use and show R coding to calculate the standard deviation for each variable of t
 -   Body – the operations performed in each iteration
 
 ```{r}
+output <- numeric()
+
+sequence <- names(mtcars)
+
+for ( i in sequence) {
+  output[i] <- sd(mtcars[[i]])
+}
+
+output
 
 
 ```
