--- a/hw2_anna_hyunjung_kim.qmd
+++ b/hw2_anna_hyunjung_kim.qmd
@@ -72,6 +72,15 @@ Write only one line of the code to return only the leap years of years 2024, 302
 
 ```{r}
 
+year <- c(2024, 3021, 2000, 1800, 800, 5050, 600, 7156)
+
+leap_year <- year[
+  (year %% 4 == 0 & year %% 100 != 0) |
+  (year %% 400 == 0)
+]
+
+leap_year
+
 ```
 
 ### Question 5:
