--- a/hw6_anna_hyunjung_kim.qmd
+++ b/hw6_anna_hyunjung_kim.qmd
@@ -40,3 +40,15 @@ emma_words <- chapter_data %>%
 
 emma_words
 ```
+
+```{r}
+library(forcats)
+
+emma_words %>%
+  count(word, sort = TRUE) %>%
+  filter(n > 600) %>%
+  mutate(word = fct_reorder(word, n)) %>%
+  ggplot(aes(word, n)) +
+  geom_col() +
+  xlab(NULL)
+```
